[package]
name = "term_grid"
description = "Library for formatting strings into a grid layout"

authors = ["Benjamin Sago <ogham@bsago.me>"]
documentation = "https://docs.rs/term_grid/"
exclude = ["/README.md", "/LICENCE", "/.rustfmt.toml", "/.travis.yml"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ogham/rust-term-grid"
version = "0.2.0"

[lib]
name = "term_grid"

[dependencies]
unicode-width = "0.1.7"
